--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "nodemailer": "^6.7.0",
     "uuidv4": "^6.2.12"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/nodemailer": "^6.4.4",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.4"
   }
